--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+root{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  overflow-x: hidden;
+  width: 100vw;
+  margin:0;
+  padding:0;
+  max-width:100%;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +48,57 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#about-title::after{
+  content: "";
+  width: 50px;
+  height: 5px;
+  border-radius: 5px;
+  color: rgb(87, 87, 87);
+  position: absolute;
+  top: 10px;
+}
+
+.slide {
+  width: 100%;
+  height: "auto";
+}
+.slide-enter {
+  margin-left: 50%;
+  opacity: 0;
+}
+.slide-enter-done {
+  margin-left: 0;
+  opacity: 1;
+  transition: margin-left 0.3s;
+}
+.slide-exit-exit {
+  margin-left: 0;
+  transition: margin-right 0.2s ease-out;
+}
+.slide-exit-done {
+  margin-left: 50%;
+  transition: margin-right 0.3s ease-out;
+}
+
+.switch-enter-active {
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+}
+.switch-exit-active {
+  transform: translateX(100%);
+  transition: transform 0.3s ease;
+}
+
+#footerTitle{
+  position: relative;
+}
+#footerTitle::before {
+  content: '';
+  position: absolute;
+  width: 200px;
+  height: 2px;
+  bottom: -10px;
+  background-color: #0ea800;
 }
